Convert png images to webp

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <title>Landing Page Ana</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="Logo" width="100" height="76">
+          <img src="img/logo.webp" alt="Logo" width="100" height="76">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -275,7 +275,7 @@
       <h3 class="title hud-base-color">Nossa empresa</h3>
       <div class="row pt-3">
         <div class="col-12 col-lg-6 d-flex order-2 order-lg-1">
-          <img src="img/team-hudinhos.png" class="img-fluid" alt="team-hudinhos">
+          <img src="img/team-hudinhos.webp" class="img-fluid" alt="team-hudinhos">
         </div>
         <div class="col-lg-6 d-flex align-items-center order-1 order-lg-2">
           <p class="team-p">Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
@@ -289,7 +289,7 @@
         </div>
       </div>
     </div>
-    <img src="img/team-frame.png" class="team-frame position-absolute end-0" alt="vectors">
+    <img src="img/team-frame.webp" class="team-frame position-absolute end-0" alt="vectors">
   </section>
   <section id="success-stories" class="container">
     <div class="text-center">
@@ -298,16 +298,16 @@
     <div id="success-stories-carousel" class="carousel carousel-dark slide mt-5" data-bs-ride="carousel">
       <div class="carousel-dimensions carousel-inner drop-shadow-carousel border-carousel overflow-hidden m-auto">
         <div class="carousel-item active">
-          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
       </div>
       <div class="carousel-indicators position-static mt-5">
@@ -352,7 +352,7 @@
             <div class="card hallmark-card">
               <div class="card-body">
                 <div class="d-flex align-items-center">
-                  <img src="img/hallmark-card-pic-1.png" alt="" class="hallmark-card-pic">
+                  <img src="img/hallmark-card-pic-1.webp" alt="" class="hallmark-card-pic">
                   <div class="ps-3">
                     <h5 class="hallmark-card-title hud-base-color">Comunicação</h5>
                     <div class="hallmark-card-hr hud-green-bg-color"></div>
@@ -367,7 +367,7 @@
             <div class="card hallmark-card">
               <div class="card-body">
                 <div class="d-flex align-items-center">
-                  <img src="img/hallmark-card-pic-2.png" alt="" class="hallmark-card-pic">
+                  <img src="img/hallmark-card-pic-2.webp" alt="" class="hallmark-card-pic">
                   <div class="ps-3">
                     <h5 class="hallmark-card-title hud-base-color text-nowrap">Foco no Digital</h5>
                     <div class="hallmark-card-hr hud-green-bg-color"></div>
@@ -383,7 +383,7 @@
             <div class="card hallmark-card">
               <div class="card-body">
                 <div class="d-flex align-items-center">
-                  <img src="img/hallmark-card-pic-3.png" alt="" class="hallmark-card-pic">
+                  <img src="img/hallmark-card-pic-3.webp" alt="" class="hallmark-card-pic">
                   <div class="ps-3">
                     <h5 class="hallmark-card-title hud-base-color">#Team HuD</h5>
                     <div class="hallmark-card-hr hud-green-bg-color"></div>
@@ -399,7 +399,7 @@
             <div class="card hallmark-card">
               <div class="card-body">
                 <div class="d-flex align-items-center">
-                  <img src="img/hallmark-card-pic-4.png" alt="" class="hallmark-card-pic">
+                  <img src="img/hallmark-card-pic-4.webp" alt="" class="hallmark-card-pic">
                   <div class="ps-3">
                     <h5 class="hallmark-card-title hud-base-color">Sem você a HuD não existiria</h5>
                     <div class="hallmark-card-hr hud-green-bg-color"></div>
@@ -446,13 +446,13 @@
   <footer class="hud-base-bg-color pt-6 pb-5 mt-n1">
     <div class="container d-flex justify-content-between align-items-center flex-column flex-md-row">
       <a href="#home" >
-        <img src="img/logo-full.png" alt="logo complete">
+        <img src="img/logo-full.webp" alt="logo complete">
       </a>
       <ul class="nav list-unstyled">
-        <li class="ms-4"><a href="#"><img src="img/instagram-icon.png" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/fb-icon.png" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/linkedin-icon.png" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/youtube-icon.png" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/instagram-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/fb-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/linkedin-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/youtube-icon.webp" alt=""></a></li>
       </ul>
     </div>
     <div class="container">
@@ -464,7 +464,7 @@
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js"></script>
 </body>
 
