Fix screen issues

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </nav>
-    <div class="d-flex flex-column align-items-center px-2 text-center">
+    <div class="d-flex flex-column align-items-center text-center">
       <h1 class="hud-white-color home-h1">É chegada a hora de</h1>
       <h2 class="hud-white-color home-h2 d-inline-block">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
       <button type="button" class="home-btn mt-3">Clique aqui e saiba mais</button>
@@ -347,7 +347,7 @@
         </div>
       </div>
       <div class="col-xl-7">
-        <div class="row row-cols-1 row-cols-sm-2 g-5 g-sm-3 g-xl-3 g-xxl-5">
+        <div class="row row-cols-1 row-cols-sm-2 gy-5 g-sm-3 g-xl-3 g-xxl-5">
           <div class="col">
             <div class="card hallmark-card">
               <div class="card-body">
@@ -458,8 +458,8 @@
     <div class="container">
       <div class="hud-white-color d-flex justify-content-center mt-5">
         <p>© HuD Comunicação. Todos os direitos reservados.</p>
-        <p class="ms-5">Política de Privacidade</p>
-        <p class="ms-5">Termos e Condições</p>
+        <p class="ms-1 ms-sm-5">Política de Privacidade</p>
+        <p class="ms-1 ms-sm-5">Termos e Condições</p>
       </div>
     </div>
   </footer>
