Update title and action links

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </div>
     </nav>
     <div class="d-flex flex-column align-items-center text-center">
-      <h1 class="hud-white-color home-h1">É chegada a hora de</h1>
+      <h1 class="hud-white-color home-h1">Chegou a hora de</h1>
       <h2 class="hud-white-color home-h2 d-inline-block">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
-      <button type="button" class="home-btn mt-3">Clique aqui e saiba mais</button>
+      <a class="home-btn mt-3 text-decoration-none" href="http://api.whatsapp.com/send?1=pt_BR&phone=5581991142350" target="_blank">Clique aqui e saiba mais</a>
     </div>
   </main>
   <section id="methods" class="container">
@@ -341,9 +341,8 @@
         </div>
         <div class="position-relative d-flex justify-content-center justify-content-xl-start my-5">
           <div class="hallmark-btn hallmark-blur hud-green-bg-color"></div>
-          <button type="button"
-            class="hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0">Solicite
-            o seu orçamento</button>
+          <a class="hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0 text-decoration-none text-black pt-4"
+            href="http://api.whatsapp.com/send?1=pt_BR&phone=5581991142350" target="_blank">Solicite o seu orçamento</a>
         </div>
       </div>
       <div class="col-xl-7">
@@ -449,10 +448,10 @@
         <img src="img/logo-full.webp" alt="logo complete">
       </a>
       <ul class="nav list-unstyled">
-        <li class="ms-4"><a href="#"><img src="img/instagram-icon.webp" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/fb-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="https://www.instagram.com/hudcomunicacao/" target="_blank"><img src="img/instagram-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="https://www.facebook.com/hudcomunicacao/" target="_blank"><img src="img/fb-icon.webp" alt=""></a></li>
         <li class="ms-4"><a href="#"><img src="img/linkedin-icon.webp" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/youtube-icon.webp" alt=""></a></li>
+        <!--<li class="ms-4"><a href="#"><img src="img/youtube-icon.webp" alt=""></a></li> -->
       </ul>
     </div>
     <div class="container">
