--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <h3 class="title hud-base-color">Nossa empresa</h3>
       <div class="row pt-3">
         <div class="col-12 col-lg-6 d-flex order-2 order-lg-1">
-          <img src="img/team-hudinhos.webp" class="img-fluid" alt="team-hudinhos">
+          <img src="img/team-hudinhos.webp" class="img-fluid" alt="team-hudinhos" loading="lazy">
         </div>
         <div class="col-lg-6 d-flex align-items-center order-1 order-lg-2">
           <p class="team-p">Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
@@ -289,7 +289,7 @@
         </div>
       </div>
     </div>
-    <img src="img/team-frame.webp" class="team-frame position-absolute end-0" alt="vectors">
+    <img src="img/team-frame.webp" class="team-frame position-absolute end-0" alt="vectors" loading="lazy">
   </section>
   <section id="success-stories" class="container">
     <div class="text-center">
@@ -298,16 +298,24 @@
     <div id="success-stories-carousel" class="carousel carousel-dark slide mt-5" data-bs-ride="carousel">
       <div class="carousel-dimensions carousel-inner drop-shadow-carousel border-carousel overflow-hidden m-auto">
         <div class="carousel-item active">
-          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="..." loading="lazy">
+          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="..." loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-2.webp" class="d-none d-md-block w-100 h-100" alt="..." loading="lazy">
+          <img src="img/success-stories-mobile-2.webp" class="d-block d-md-none w-100 h-100" alt="..." loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="img/success-stories-1.webp" class="d-none d-md-block w-100 h-100" alt="...">
-          <img src="img/success-stories-mobile-1.webp" class="d-block d-md-none w-100 h-100" alt="...">
+          <img src="img/success-stories-3.webp" class="d-none d-md-block w-100 h-100" alt="..." loading="lazy">
+          <img src="img/success-stories-mobile-3.webp" class="d-block d-md-none w-100 h-100" alt="..." loading="lazy">
+        </div>
+        <div class="carousel-item">
+          <img src="img/success-stories-4.webp" class="d-none d-md-block w-100 h-100" alt="..." loading="lazy">
+          <img src="img/success-stories-mobile-4.webp" class="d-block d-md-none w-100 h-100" alt="..." loading="lazy">
+        </div>
+        <div class="carousel-item">
+          <img src="img/success-stories-5.webp" class="d-none d-md-block w-100 h-100" alt="..." loading="lazy">
+          <img src="img/success-stories-mobile-5.webp" class="d-block d-md-none w-100 h-100" alt="..." loading="lazy">
         </div>
       </div>
       <div class="carousel-indicators position-static mt-5">
@@ -317,6 +325,10 @@
           aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#success-stories-carousel"
         data-bs-slide="prev">
@@ -451,7 +463,6 @@
         <li class="ms-4"><a href="https://www.instagram.com/hudcomunicacao/" target="_blank"><img src="img/instagram-icon.webp" alt=""></a></li>
         <li class="ms-4"><a href="https://www.facebook.com/hudcomunicacao/" target="_blank"><img src="img/fb-icon.webp" alt=""></a></li>
         <li class="ms-4"><a href="#"><img src="img/linkedin-icon.webp" alt=""></a></li>
-        <!--<li class="ms-4"><a href="#"><img src="img/youtube-icon.webp" alt=""></a></li> -->
       </ul>
     </div>
     <div class="container">
