--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-  <title>Landing Page Ana</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>HuD Comunicação | Se destaque no mercado digital</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <meta name="description" content="O futuro é agora. Invista no universo digital.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -275,7 +277,7 @@
       <h3 class="title hud-base-color">Nossa empresa</h3>
       <div class="row pt-3">
         <div class="col-12 col-lg-6 d-flex order-2 order-lg-1">
-          <img src="img/team-hudinhos.webp" class="img-fluid" alt="team-hudinhos" loading="lazy">
+          <img src="img/team-hudinhos.webp" class="img-fluid" alt="team-hudinhos" width="721" height="619" loading="lazy">
         </div>
         <div class="col-lg-6 d-flex align-items-center order-1 order-lg-2">
           <p class="team-p">Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
@@ -432,10 +434,10 @@
         <div class="contact-wrapper container text-center pb-md-3">
           <h3 class="contact-title hud-green-color">E aí, topa iniciar uma parceria?</h3>
           <h4 class="contact-subtitle hud-white-color pb-5">Preencha abaixo e seja um dos nossos cases de sucesso.</h4>
-          <form class="contact-form d-flex flex-column justify-content-evenly">
+          <form target="_blank" action="https://formspree.io/f/xyyajqjo" method="POST" class="contact-form d-flex flex-column justify-content-evenly">
             <div class="mb-5">
               <label for="name" class="form-label contact-form-label hud-green-color mb-4">Nome e sobrenome</label>
-              <input type="text" class="contact-form-control px-5" id="name" name="phone" required>
+              <input type="text" class="contact-form-control px-5" id="name" name="name" required>
             </div>
             <div class="mb-5">
               <label for="phone" class="form-label contact-form-label hud-green-color mb-4">Telefone</label>
@@ -443,11 +445,13 @@
             </div>
             <div class="mb-5">
               <label for="email" class="form-label contact-form-label hud-green-color mb-4">E-mail</label>
-              <input type="email" class="contact-form-control px-5" id="email" name="email" required=>
+              <input type="email" class="contact-form-control px-5" id="email" name="email" required>
             </div>
             <div class="position-relative d-flex justify-content-center mt-3">
               <div class="contact-rectangle hallmark-rectangle hud-green-bg-color"></div>
-              <button type="submit" class="contact-rectangle hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0">Enviar</button>
+              <button type="submit"
+                class="contact-rectangle hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0"
+                onclick="this.disabled=true;this.form.submit();">Enviar</button>
             </div>
           </form>
         </div>
@@ -456,13 +460,13 @@
   </section>
   <footer class="hud-base-bg-color pt-6 pb-5 mt-n1">
     <div class="container d-flex justify-content-between align-items-center flex-column flex-md-row">
-      <a href="#home" >
-        <img src="img/logo-full.webp" alt="logo complete">
+      <a href="#home">
+        <img src="img/logo-full.webp" alt="logo complete" width="167" height="167">
       </a>
       <ul class="nav list-unstyled">
-        <li class="ms-4"><a href="https://www.instagram.com/hudcomunicacao/" target="_blank"><img src="img/instagram-icon.webp" alt=""></a></li>
-        <li class="ms-4"><a href="https://www.facebook.com/hudcomunicacao/" target="_blank"><img src="img/fb-icon.webp" alt=""></a></li>
-        <li class="ms-4"><a href="#"><img src="img/linkedin-icon.webp" alt=""></a></li>
+        <li class="ms-4"><a href="https://www.instagram.com/hudcomunicacao/" aria-label="Instagram" target="_blank"><img src="img/instagram-icon.webp" alt="instragram icon" width="33" height="34"></a></li>
+        <li class="ms-4"><a href="https://www.facebook.com/hudcomunicacao/" aria-label="Facebook" target="_blank"><img src="img/fb-icon.webp" alt="facebook icon" width="17" height="34"></a></li>
+        <li class="ms-4"><a href="#" aria-label="Linkedin"><img src="img/linkedin-icon.webp" alt="linkedin icon" width="30" height="31"></a></li>
       </ul>
     </div>
     <div class="container">
