--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-  <main id="home" class="home-wrapper bg-home-img bg-cover d-flex align-items-center justify-content-center">
+  <main id="home" class="home-wrapper bg-home-img bg-cover d-flex align-items-center justify-content-center" style="background-color: #051826;">
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.webp" alt="Logo" width="100" height="76">
+          <img src="img/logo.webp" alt="Logo" width="80" height="80">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,7 +154,7 @@
     </div>
     <div id="xs-block" class="d-block d-md-none mt-5">
       <div id="methods-carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-inner overflow-visible">
+        <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card drop-shadow card-rounded border-0 overflow-hidden">
               <div class="hud-base-bg-color card-bg-img bg-cover">
